--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -30,13 +28,13 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
+# env files
+.env
+.env.*
 .env*.local
 
 # typescript
 *.tsbuildinfo
-
-app-example
 
 # generated native folders
 /ios
