--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.86.2",
     "expo": "~54.0.26",
     "expo-constants": "~18.0.10",
+    "expo-document-picker": "~14.0.8",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
