--- a/app.json
+++ b/app.json
@@ -46,7 +46,8 @@
         {
           "mode": "development"
         }
-      ]
+      ],
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true,
