--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.86.2",
     "expo": "~54.0.26",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-constants": "~18.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-font": "~14.0.9",
@@ -31,11 +32,11 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "onesignal-expo-plugin": "^1.1.2",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-onesignal": "^5.2.16",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -43,7 +44,9 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.6",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
