--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["deno.ns", "dom"]
+    "lib": ["deno.ns", "dom"],
+    "strict": true
   },
-  "importMap": "./import_map.json"
+  "imports": {
+    "std/": "https://deno.land/std@0.177.0/",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.6"
+  }
 }
